# lib/db/src/schema/items.ts
@@ -1,9 +1,11 @@
 import { pgTable, serial, text, timestamp, integer } from "drizzle-orm/pg-core";
 import { createInsertSchema } from "drizzle-zod";
 import { z } from "zod/v4";
+import { productsTable } from "./products";
 
 export const itemsTable = pgTable("items", {
   id: serial("id").primaryKey(),
+  productId: integer("product_id").references(() => productsTable.id),
   name: text("name").notNull(),
   category: text("category").notNull(),
   location: text("location").notNull().default("Pantry"),
